docs/tests/typing/bad/testfile-overload-1.cpp
class A {
public:
  void A::f();
  void A::f();
};
int main() {}

